Fix help being to large on mobile screens

--- a/wp-content/themes/wp-bootstrap-starter/style.css
+++ b/wp-content/themes/wp-bootstrap-starter/style.css
@@ -1440,6 +1440,7 @@ input[type="radio"]:checked + label {
 @media only screen and (max-width: 768px) {
     .col-xs-6 { flex: 0 0 50%; max-width: 50%; }
     .alert { right:0px !important; z-index:9999999999999 !important; top:120px!important; }
+    .alert-help { top:auto!important; }
     .logged-in .permaNotification { left:0; top: 120px; }
 	.sortMobile{
 		display: block;
